# ChangeLog for net-misc/asterisk
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/asterisk/ChangeLog,v 1.480 2014/04/25 19:07:10 chainsaw Exp $

*asterisk-12.2.0 (25 Apr 2014)

  25 Apr 2014; Tony Vroon <chainsaw@gentoo.org> +asterisk-12.2.0.ebuild:
  Adds HEPv3 protocol support and PJSIP gains DNS client abilities that unlock
  SRV records & weighting. This branch remains experimental and is not
  recommended for production use at this time.

*asterisk-1.8.27.0 (25 Apr 2014)

  25 Apr 2014; Tony Vroon <chainsaw@gentoo.org> +asterisk-1.8.27.0.ebuild:
  Select bug fixes as cherry picked from the 11 branch. TLS chaining support
  finally upstream. Move up to 11 if you still use this.

*asterisk-11.9.0 (25 Apr 2014)

  25 Apr 2014; Tony Vroon <chainsaw@gentoo.org> +asterisk-11.9.0.ebuild:
  Bug fix release, fixes include but are not limited to dial plan functions
  coping with a NULL channel (AMI global function), correct NULL handling in
  ODBC, advertising MESSAGE support in SIP headers, SpanDSP API adherence and
  protection against non-G711 data in fax detection routines. TLS chaining
  support finally upstream.

  11 Mar 2014; Agostino Sarubbo <ago@gentoo.org> -asterisk-1.8.25.0.ebuild,
  -asterisk-11.7.0.ebuild:
  Remove old

  11 Mar 2014; Agostino Sarubbo <ago@gentoo.org> asterisk-1.8.26.1.ebuild,
  asterisk-11.8.1.ebuild:
  Stable for x86, wrt bug #504180

  11 Mar 2014; Agostino Sarubbo <ago@gentoo.org> asterisk-1.8.26.1.ebuild,
  asterisk-11.8.1.ebuild:
  Stable for amd64, wrt bug #504180

*asterisk-12.1.1 (11 Mar 2014)
*asterisk-11.8.1 (11 Mar 2014)
*asterisk-1.8.26.1 (11 Mar 2014)

  11 Mar 2014; Tony Vroon <chainsaw@gentoo.org> -asterisk-1.8.26.0.ebuild,
  +asterisk-1.8.26.1.ebuild, -asterisk-11.7.0-r1.ebuild,
  -asterisk-11.8.0.ebuild, +asterisk-11.8.1.ebuild, -asterisk-12.0.0.ebuild,
  -asterisk-12.1.0.ebuild, +asterisk-12.1.1.ebuild: