@@ -25,19 +25,19 @@ DIST gentoo-asterisk-patchset-1.18.tar.bz2 31282 SHA256 f1ee594848036c883e95185a
 DIST gentoo-asterisk-patchset-3.10.tar.bz2 6705 SHA256 20ee24b47e0b764dee9473f5df1ac30bc2dd2056d9227ad4794e60df2699a8fb SHA512 9d0767f9e81cdbc1efc8effcafa6bb4c7bb310f8e3bff51f2413b52b040007f290f3a88659d5b1e09a93a0d043fe92b6c2216a27fc03496dfa34db30f002a4f6 WHIRLPOOL 308580fb52018c8670211073b542720f97ad6b7354b55c294ef364e7af00e5f968691f1127c823ebe2bfbf778375fe3022be139ff57afbf0764fa2799df69b25
 DIST gentoo-asterisk-patchset-3.7.tar.bz2 7068 SHA256 7633a3ea22cab8aa83da8499b7eb9d2703ee6c4a4e4fd9f135bd39d313a33cda SHA512 f45753e1f065a78040344a2006ef1f6c14efc6b0187fe4ccf71ed8f30b1f20a1fec58cb14751a5806f06e7ae9269344e267121865b04af146388f9acdbfbd4e7 WHIRLPOOL a6ba6682411c6cf0344c0919441a4b2259769cbc101e39ada748540668aa4e42794008c9d3917452bf30242abe232f44b6ce7fc7f91ef1c8889c6664512d04f9
 DIST gentoo-asterisk-patchset-3.9.tar.bz2 7857 SHA256 d41b2c47a56040e3eb55b9354f05df6857f6efc60b35c081b8cdf50a8f6eed50 SHA512 97c49fdfb874e89a07abc0b129c9db0113a77feecd6bb1fea9b00a1f82161a9799f7a280fd2f6fc11c5e1e6984fc8374354967307f8e1b2d3a9fa713d350453c WHIRLPOOL ce7367cca3e6516d0e1fdb758f3463670b1cc2dad5a82abb3c3b1b3dc25ef07bc917ac0184e58674a02e88ffc6ac0b770f217a6870011791758e6612febf09f6
-EBUILD asterisk-1.8.26.1.ebuild 9187 SHA256 1e38ae7b1cf30c83abc3ca7c44c8757f3235e2360159ca5a1841c77291fc8644 SHA512 0cd72011211854e40279556b6c84b15deb0463105c6768a62d22690c8ee351df8b86c3d865e171f6b2bbf822e6c1969a79f1b5b829999317d506d8fd6081259c WHIRLPOOL 62b7c5e6218bb82508ec0119c6785330718ab0c585fe0ee848f9606df11ab451ab6119db1fe083c241c3215c05af768095d9190a694e0fbb2ce9d3c11f1e85aa
-EBUILD asterisk-1.8.27.0.ebuild 9194 SHA256 d6f29f4f30945716502f7f50bc3681ce60275d7918f0ae9a3288a54e5a3ef261 SHA512 d6ea92658236fe939c1ad5df7e439a31b7bb649bdb70fdbaf0886b4d710efc4058ff96db1c27addda0315279fc4c8d6331f0031798492b383092effa45f1e10a WHIRLPOOL 8937cb568aca462335b11f17d8c2db2f125131e5fee854af25af7740252c57959d550118b47eee59d75d1efd888406e082adf400f068e2c21e2d58ba491f067f
-EBUILD asterisk-11.8.1.ebuild 9430 SHA256 76d3ec471b4d636fbe20c8d07435a91320fb2026731b19188c5cf3ef6029ae57 SHA512 8d07b14750d324d445a71faab8a594593eec7a237a3123357313c4807c5432ff6bb8fa82c65b4fb044f7c2b7d5dd0e5363f1bc7424fa6bcb0387c2c47cc99a3e WHIRLPOOL 138ff17a13f0f78cd87c199d2dcd4b291f63e1118010c3138112f4aa72015e670ba062fd2f04d09715981aa6aa4cb061e7cd691a0aca08fa71f87ab1fe21043d
-EBUILD asterisk-11.9.0.ebuild 9438 SHA256 4b43f6eedca96efcec0c6bc40fd692845da1bc8fa9c1b81e3ea3295b8db45160 SHA512 a9a9865cd406521d4a6ec579a6533b5f9971aa17509b7011cbf8554fed3596728f198180141720ebc1526bcc9b1d5158feae0995c87069ed5b181502898cdd74 WHIRLPOOL 8f9fb84ef1a520e8b479ea4a3d7f5de7dd2285ca8edb152ecf210d1a6c4ef8f979b232ebab4f2944cf9b72bd8dc45ee8da276817a4af938e2285da1c16597d2e
-EBUILD asterisk-12.1.1.ebuild 9514 SHA256 e11bed06c0477675bf223cf8d8987653b72c2a1ddad5d780d4662316feabe8c4 SHA512 6b2a45ce1914774fd60fc4088c95235803f8a3d7df0bc7d90f8cea97103c315bddef2cc82ede6bd1ea59609b9f182a3db32c01036fb287c42bff5bf0217a6c90 WHIRLPOOL 36ed75a1e076ac1514dac28767a330ff10049ce146bf76d5dbf45942b1937286dddb9f73671bc6a4f45f7f423b0f115aed477eb3c0f71e595367e4568e4626ee
-EBUILD asterisk-12.2.0.ebuild 9515 SHA256 f35d1b5e26f35e367c0ee471929bc7b95e3990abc04d1e4156be1ffbd2c6a932 SHA512 db17796338b9f1ceabd88d110834ed4f689025472e4b609b17763c549f18423a90d79e59c3148b2d3c146ae0e5038150b6cedd2a51c677f46f012a3b13b5f586 WHIRLPOOL 97586874b1792e18f21a99353a5bf6807978cf92f0fc38ad994d46b6da610e9d1ee2a6cf1c2b5f73004f9ac3f693b776402cc97e568523e9b124c6f35452057e
-MISC ChangeLog 13248 SHA256 93fb7118785388e4056de8b92dc960445fe64b5ef0dabf18fda896f58750fe79 SHA512 faebec2444b4736b6ab82b3f16347977715cfb5c6421160b308310875af3cfef222605008857a1ec13df3f39ff03c4a6396d77baf2e4da746edfbb62b3d5759b WHIRLPOOL 12aeb975fb2b2bedfe829045cc2bdade29cd464fd3e2d8ccc09e6bc866fecbac2b7d72b1f6c0825de52f292089a5a2f93538149cbd1b27f379d081c13bf8833a
+EBUILD asterisk-1.8.26.1.ebuild 9192 SHA256 ba59b0630b84a5406245c51bc4f01cd1d272f3122436eab3c9ad819e1bf26ae5 SHA512 889286a57081ea6f0de90b9a03cf16fcea19963f1eebb051c3f4ebceca31d8019674927d986e60cb2e5ef22320839f003d45440ba0b91f319da167b6eaf420c1 WHIRLPOOL ea73eabcfca6fd9a54bb6a0a15845f4564872833037d90d35cb9b7f3a742bd41c7d033bf2258fd142fcd2ac0cbc9d88dde4485c0d885d50c0f0b60480217a565
+EBUILD asterisk-1.8.27.0.ebuild 9194 SHA256 bddd92d9a2fcbb3d79d0ed4b2f2b6e3cc0368bc5298b00f461fdef0e5a53d543 SHA512 4b6ae5a6b2335f5a7070b68f622bdf6504af3a6709efb6f3cd3ceec0ce8420fa6deafce0d95f505bc602fa7eceec0104f75c56645beba40d7bd072b2698f9b4c WHIRLPOOL 2ae32bbfaf02704f2f6cb13123d678497186a4b5012f13ade22fca3d16f60edfb63b24fd2302aab14db0294530e3feb4f9a1ecd9a88be0653021fd4981b99caa
+EBUILD asterisk-11.8.1.ebuild 9435 SHA256 3c6f800cc1aac9bec05714ae2bc8d52b56506d1785f551df093ee2a05f0eebc3 SHA512 91fa15b296615543e56c50fe810a96107fb3326be01f9d90c2ea1c7a1a4f497acd9bfabdbf0fe22f5744e75003c08505854944a959c0d32d8e563bfff304f6dd WHIRLPOOL 1f5d6a2cf3c1cf75b314a17065f386396b5adb62e4f16b0177da6bb425f0f966dc1024bc6e1a4b5d8e1fcaaefcbad876f55f324756a94db6be121731869f4579
+EBUILD asterisk-11.9.0.ebuild 9438 SHA256 117dd5fcccc7120c435bf0da7786e3825b5e3a4731381953c7638e0f205d9580 SHA512 1c61eb778141ab245398a297b0527b0658263477135b476d143802227dba638e3f12a008783a68a6796f8edb74f9c3e252b20eeba2a3f9d1a42d6ed0228a4dc0 WHIRLPOOL fe8ad40040efa0cde629bf9e98a1e8fc9f079faa987bd4a78da11468fc6bedcb941116265a136a6b2d0a517bcbbecf22496505e424308723afc84ccb2b37cff2
+EBUILD asterisk-12.1.1.ebuild 9514 SHA256 460900f24442b6175540dda7551e51a256f9e0b1c6fc371f37d5493879a1138f SHA512 192e0f3645de7703b9e6a04b653255ad3eeaccb247d0b593776f174395f6aa9f2de67803d80f6da10d8e8f60e1d73b3d95d06c2e5cd4f24c142d152bcf170ab8 WHIRLPOOL 4ab8d43965a12294af5d66cbd7c15b11f8af5688cf987d6d5d94e54c07e4658e5a612442ac7853df1e684d2a3ef228031dd8321f6a02e7cd1250f5bb37772934
+EBUILD asterisk-12.2.0.ebuild 9515 SHA256 be93d8ab142f2a01173ec8909129da2e5d51d4926e57c4abac2167502905176d SHA512 5848048ad1b291ab7a970c08d7b67875a17ea23ddb7e1ffc7ae2639677e46b399dcc487da4e1ec6f779563e63307f0488770ac1776ca314b6c52c721b18a95b0 WHIRLPOOL b93250c8f9adf3e7ab230b83ac08cd82827ff568939cbe295ecda0e3ca0b90495631519ddd6c48df3ab32041f6a335984fd2da3e050ef13ef4220a50b38576b3
+MISC ChangeLog 13653 SHA256 b987c77c6a6c08b93e2fb3c76a0b8c7755b46f0310f7d098c61da32c3e7e50ea SHA512 112ed54104133524c8c0dfb42e95a04fa0513b191be7f69494f07c358b10356140e96bbd0fc2d877c8865d595158293b044aa563fbc9f961d69dac43ca685ade WHIRLPOOL 0bc5bfa8021f044d0e55a6e8bd176d6f5dcb640ad2b51bef62806dfe2c91a932f831a8d2b4a25dcebb8d532d92e73b7b79b73f89d5f5bae2f439652641306fef
 MISC ChangeLog-2012 113409 SHA256 6beb419f0c2e63641c73f2c14bd0c3a6a319c65bca8be526aa441fac2104fc9c SHA512 08c037acd578b9c3c387a80e45e80a68c4da84e63fced30215f22ec14eb6e223348d8e7d68f4decdf8a2d8cd0933b3f7fa3adddf7cd80bb407498b3e2868d917 WHIRLPOOL be0f2192531f7477545ccc0f10d9a50f36228e8d8d0e2773ccce3799c2d1b5e1b7be70d96502f759c7c878f88efd83122fc9230374c40c8963fe0bc7ff014b87
 MISC metadata.xml 1183 SHA256 f92828f92cf3e0ce3581e031e3ecdc26336481db45fe6ea7b91e79fc3e58032c SHA512 9b00df0793f68988b4b7b2da778b05cd183e663a96c92b5f96ac1e09ba34a96a5155deb0639638e499701e5cf76de6cc6736f757a48608c2accf14e3ff633c14 WHIRLPOOL d5e4bd47714fa34285733f9c3ed2dff0fa65f33daeda7276428e7eaf0cd44ef59351f67f590ecab38305e77b9c3683c368ad764f323f3d9891b3414600aa4211
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlNaswwACgkQp5vW4rUFj5pCTgCgg70TSobv7bZKqDwhNTd1z+KV
-fJoAn1mUo8tlqO8PQRoBVdrTU7D7b+I7
-=b/Va
+iEYEAREIAAYFAlNrUVcACgkQp5vW4rUFj5qvogCgmhQIuILw+45Lr0Mr38DUvj88
+KGEAoKxgClaYo1SKhX9U6xTHocvp8UQL
+=3afV
 -----END PGP SIGNATURE-----
